# quasar-svm

./: .gitignore  .npmignore  Cargo.toml  DISCREPANCIES.md  EXECUTION_TRACE.md  Makefile  README.md  build.rs  package-lock.json  package.json  tsconfig.json
bindings/go/: README.md  bench_test.go  build_darwin_amd64.go  build_darwin_arm64.go  build_dynamic.go  build_linux_amd64.go  build_linux_arm64.go  build_windows_amd64.go  cgo_dev.go  factories.go  fuzz_test.go  go.mod  mem.out  quasar.go  quasar_test.go  select_quasar_svm.h  types.go  wire.go
bindings/go/libquasar_svm_vendor/: quasar_svm.h
bindings/node/src/: base.ts  ffi.ts  index.ts  programs.ts  token.ts  web3js.d.ts
bindings/node/src/internal/: deserialize.ts  result.ts  types.ts
bindings/node/src/kit/: README.md  index.ts  result.ts  types.ts  wire.ts
bindings/node/src/web3.js/: README.md  index.ts  result.ts  types.ts  wire.ts
bindings/node/src/web3js/: index.ts  types.ts  wire.ts
docs/: accounts.md  api.md  astro.config.mjs  package.json  tokens.md
docs/.astro/: content-modules.mjs  content.d.ts  data-store.json  settings.json
docs/src/content/docs/: accounts.mdx  api.mdx  index.mdx  tokens.mdx
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: ffi.rs  lib.rs  wire.rs
include/: quasar_svm.h
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: error.rs  ffi.rs  lib.rs  program_cache.rs  svm.rs  sysvars.rs  wire.rs
svm/: Cargo.toml  README.md
svm/benches/: svm_bench.rs
svm/src/: lib.rs  message.rs  program_cache.rs  svm.rs  sysvars.rs  token.rs  user.rs
svm/tests/: ata_inner_instructions.rs  execution_trace.rs  inner_instructions.rs
