[package]
name = "quasar-svm-ffi"
version = "0.1.0"
edition = "2024"

[lib]
name = "quasar_svm"
crate-type = ["cdylib"]

[dependencies]
quasar-svm = { path = "../svm" }
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-instruction-error = "2.0"
solana-program-error = "3.0"
solana-clock = "3.0"
solana-epoch-schedule = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"

[build-dependencies]
cbindgen = "0.28"
