[package]
name = "quasar-svm-ffi"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
name = "quasar_svm"
crate-type = ["cdylib"]

[dependencies]
quasar-svm = { path = "../svm" }
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-instruction-error = "2.0"
solana-program-error = "3.0"
solana-clock = "3.0"
solana-epoch-schedule = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-message = "3.0.1"
solana-hash = "3.1"

# RPC feature dependencies
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
bs58 = { version = "0.5", optional = true }

[features]
# rpc = ["quasar-svm/rpc", "dep:serde", "dep:serde_json", "dep:bs58"]

[build-dependencies]
cbindgen = "0.28"
