[package]
name = "quasar-svm-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Blueshift <hello@blueshift.gg>"]
description = "C FFI bindings for quasar-svm"
license = "MIT"
repository = "https://github.com/blueshift-gg/quasar-svm"
homepage = "https://github.com/blueshift-gg/quasar-svm"
keywords = ["solana", "svm", "ffi", "bindings"]
categories = ["development-tools", "api-bindings"]
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE"
]

[lib]
name = "quasar_svm"
crate-type = ["cdylib", "staticlib"]

[dependencies]
quasar-svm = { path = "../svm" }
solana-pubkey = "4.0"
solana-account = "3.2"
solana-instruction = "3.0"
solana-instruction-error = "2.0"
solana-program-error = "3.0"
solana-clock = "3.0"
solana-epoch-schedule = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-message = "3.0.1"
solana-hash = "3.1"

[build-dependencies]
cbindgen = "0.28"
