[package]
name = "quasar-svm"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
# Core SVM execution
agave-feature-set = { version = "3.1", features = ["agave-unstable-api"] }
agave-syscalls = "3.1"
solana-bpf-loader-program = { version = "3.1", features = ["agave-unstable-api"] }
solana-program-runtime = "3.0"
solana-system-program = { version = "3.1", features = ["agave-unstable-api"] }
solana-transaction-context = { version = "3.1", features = ["dev-context-only-utils"] }

# Types
solana-account = "3.2"
solana-clock = "3.0"
solana-compute-budget = { version = "3.1", features = ["agave-unstable-api"] }
solana-epoch-rewards = "3.0"
solana-epoch-schedule = "3.0"
solana-hash = "3.1"
solana-instruction = "3.0"
solana-instruction-error = "2.0"
solana-instructions-sysvar = "3.0"
solana-loader-v3-interface = { version = "6.1", features = ["serde"] }
solana-message = "3.0.1"
solana-precompile-error = "3.0"
solana-pubkey = "4.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-slot-hashes = "3.0"
solana-stake-interface = "2.0.1"
solana-svm-callback = "3.1"
solana-svm-log-collector = "3.1"
solana-svm-timings = "3.1"
solana-svm-transaction = "3.0"
solana-sysvar = "3.0"
solana-sysvar-id = "3.0"
solana-transaction-error = "3.0"

bincode = "1.3"
borsh = { version = "1", optional = true }
spl-token = { version = "9.0.0", default-features = false, features = ["no-entrypoint"] }
solana-program-pack = "3.1"

[features]
borsh = ["dep:borsh"]
